--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Flex + Admin + Request (Firebase)</title>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<title>Flex + Admin + LINE Request</title>
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <style>
 body { font-family: sans-serif; background: #111; color: #fff; padding: 30px; }
@@ -14,9 +12,9 @@ input { width: 100%; padding: 12px; border-radius: 6px; border: none; font-size:
 button { font-size: 16px; padding: 10px 20px; border: none; border-radius: 6px; cursor: pointer; margin-top: 10px; }
 .admin-panel { background: rgba(0,0,0,0.6); margin-top: 30px; padding: 20px; border-radius: 10px; text-align:left;}
 #logOutput, #myUserId { margin-top: 10px; font-weight: bold; white-space: pre-line; color: #0f0; text-align:left;}
-.request-list { margin-top:10px; text-align:left; }
 .flex-row { display: flex; gap: 10px; align-items: center; margin-top: 10px; }
 .flex-row input { flex: 1; }
+img.qrcode { width: 200px; margin-top: 10px; border: 2px solid #fff; border-radius: 10px; }
 </style>
 </head>
 <body>
@@ -34,6 +32,8 @@ button { font-size: 16px; padding: 10px 20px; border: none; border-radius: 6px; 
   <input id="reqLineId" placeholder="กรอก LINE ID ของคุณ">
   <button onclick="sendRequest()">ส่งคำขอใช้</button>
 </div>
+<!-- แสดง QR Code -->
+<img class="qrcode" src="https://img2.pic.in.th/IMG_1081.jpeg" alt="แอดไลน์">
 
 <div class="admin-panel">
   <h3>Admin Panel</h3>
@@ -47,31 +47,15 @@ button { font-size: 16px; padding: 10px 20px; border: none; border-radius: 6px; 
   </div>
   <div id="list"></div>
 
-  <h4>รายการคำขอใช้</h4>
-  <div id="requestList" class="request-list"></div>
+  <h3>Log (เฉพาะ admin)</h3>
+  <div id="logOutput"></div>
 </div>
-
-<h3>Log (เฉพาะ admin)</h3>
-<div id="logOutput"></div>
 
 <script>
 // === LINE & Admin ===
 const ADMIN = "Ua48c35a3cd7641afee1d85c317032ad5"; // ใส่ userId ของ admin
 let whitelist = JSON.parse(localStorage.getItem("whitelist") || "[]");
 let currentUserId = "";
-
-// === Firebase Config ===
-const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-  databaseURL: "https://YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_PROJECT_ID.appspot.com",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId: "YOUR_APP_ID"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
 
 // === Log ===
 function log(msg){ document.getElementById("logOutput").innerText += msg + "\n"; }
@@ -82,29 +66,6 @@ function renderList(){
   const view = whitelist.map(w=>`👤 ${w.name}\n🆔 ${w.userId}`).join("\n\n");
   document.getElementById("list").innerText = view || "ยังไม่มี whitelist";
   document.getElementById("whitelistControls").style.display = (currentUserId === ADMIN) ? "flex" : "none";
-}
-
-// === Render Requests ===
-function renderRequests(requests){
-  const container = document.getElementById("requestList");
-  container.innerHTML = "";
-  if(!requests || Object.keys(requests).length===0){
-    container.innerText = "ยังไม่มีคำขอ";
-    return;
-  }
-  Object.entries(requests).forEach(([key,r],i)=>{
-    const div = document.createElement("div");
-    div.style.marginBottom = "8px";
-    div.innerText = `${i+1}. LINE ID: ${r.lineId}, userId: ${r.userId}`;
-    if(currentUserId === ADMIN){
-      const btn = document.createElement("button");
-      btn.innerText = "ลบ";
-      btn.style.marginLeft = "10px";
-      btn.onclick = ()=> deleteRequest(key);
-      div.appendChild(btn);
-    }
-    container.appendChild(div);
-  });
 }
 
 // === Admin add/remove whitelist ===
@@ -201,45 +162,24 @@ async function showMyUserId(){
     document.getElementById("myUserId").innerText = `🆔 UserId ของคุณคือ: ${currentUserId}`;
     log("โชว์ UserId ของตัวเอง: "+currentUserId);
     renderList();
-    // ดึง request จาก Firebase
-    const requestsRef = db.ref("requests");
-    requestsRef.on("value", snapshot => renderRequests(snapshot.val()));
   }catch(e){ logError("❌ ไม่สามารถดึง userId: "+e); }
 }
 
-// === Send Request ===
-async function sendRequest(){
-  if(!liff.isInClient()) return alert("⚠ เปิดผ่าน LINE");
-  const lineId = document.getElementById("reqLineId").value.trim();
-  if(!lineId) return alert("❌ กรุณากรอก LINE ID");
-  try{
-    const profile = await liff.getProfile();
-    const newReqRef = db.ref("requests").push();
-    await newReqRef.set({lineId, userId: profile.userId});
-    alert("📨 ส่งคำขอเรียบร้อยแล้ว");
-    document.getElementById("reqLineId").value = "";
-  }catch(e){ logError("❌ ส่งคำขอไม่สำเร็จ: "+e); }
+// === Send Request (ไปแอดไลน์ admin) ===
+function sendRequest(){
+  const lineIdInput = document.getElementById("reqLineId").value.trim();
+  if(!lineIdInput) return alert("❌ กรุณากรอก LINE ID");
+  alert("📨 กำลังเปิด LINE เพื่อแอดแอดมิน");
+  window.open("http://line.me/ti/p/~mc357.com", "_blank");
 }
 
-// === Delete Request ===
-function deleteRequest(key){
-  if(currentUserId!==ADMIN) return alert("⛔ เฉพาะ admin ลบได้");
-  db.ref("requests/" + key).remove();
-  log(`🗑 ลบคำขอ: ${key}`);
-}
-
-// === Init LIFF + Firebase ===
+// === Init LIFF ===
 liff.init({ liffId: "2008621627-1eN2VA2x" }).then(async ()=>{
   try{
     const profile = await liff.getProfile();
     currentUserId = profile.userId;
     log("LIFF Init สำเร็จ! UserId: "+currentUserId);
     renderList();
-
-    // ดึง request จาก Firebase realtime
-    const requestsRef = db.ref("requests");
-    requestsRef.on("value", snapshot => renderRequests(snapshot.val()));
-
   }catch(e){ logError("❌ LIFF Init ไม่สำเร็จ: "+e); }
 });
 </script>
