--- a/index.html
+++ b/index.html
@@ -3,64 +3,94 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>LIFF Share System</title>
+<title>LIFF Flex Generator</title>
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
 <style>
 body {
   font-family: sans-serif;
-  margin:0;
-  padding:0;
-  height:100vh;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
   background: url('https://img2.pic.in.th/IMG_1247.gif') no-repeat center center fixed;
   background-size: cover;
-  color:#fff;
-  text-align:center;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  overflow:auto;
-  backdrop-filter:brightness(0.5);
+  color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
+  backdrop-filter: brightness(0.5);
 }
+
 .panel {
-  width:90%;
-  background:rgba(0,0,0,0.75);
-  padding:16px;
-  border-radius:10px;
-  margin-top:20px;
-  text-align:left;
+  width: 90%;
+  background: rgba(0,0,0,0.75);
+  padding: 18px;
+  border-radius: 10px;
+  margin-top: 20px;
+  text-align: left;
 }
+
 input {
-  width:100%;
-  padding:12px;
-  border-radius:6px;
-  border:none;
-  font-size:16px;
-  margin-top:8px;
-  background:#000;
-  color:#0ff;
-  border:1px solid #0ff;
+  width: 100%;
+  padding: 12px;
+  border-radius: 6px;
+  border: 1px solid #0ff;
+  font-size: 16px;
+  margin-top: 8px;
+  background: #000;
+  color: #0ff;
 }
+
 button {
-  width:100%;
-  padding:12px;
-  margin-top:12px;
-  border-radius:6px;
-  border:1px solid #0ff;
-  background:#000;
-  color:#0ff;
-  font-size:18px;
-  cursor:pointer;
+  width: 100%;
+  padding: 12px;
+  margin-top: 12px;
+  border-radius: 6px;
+  border: 1px solid #0ff;
+  background: #000;
+  color: #0ff;
+  font-size: 18px;
+  cursor: pointer;
 }
+
 button:hover {
-  background:#0ff;
-  color:#000;
+  background: #0ff;
+  color: #000;
 }
-#greeting { margin-top:25px; font-size:22px; color:#fff; }
-#myUserId { margin-top:10px; font-weight:bold; color:#0f0; font-size:14px; word-break:break-all; }
-.qr { margin-top:35px; text-align:center; }
-.qr img { border-radius:10px; border:2px solid #0ff; width:180px; }
-.qr p { color:#0ff; font-weight:bold; }
+
+#greeting {
+  margin-top: 30px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+}
+
+#myUserId {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #0f0;
+  font-size: 14px;
+  word-break: break-all;
+}
+
+.qr {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.qr img {
+  border-radius: 10px;
+  border: 2px solid #0ff;
+  width: 180px;
+}
+
+.qr p {
+  color: #0ff;
+  font-weight: bold;
+  margin-top: 10px;
+}
 </style>
 </head>
 
@@ -69,73 +99,142 @@ button:hover {
 <h2 id="greeting">สวัสดีคุณ...</h2>
 
 <div class="panel">
-  <h3>Flex Generator</h3>
-  <input id="imageUrl" placeholder="วางลิงก์รูปภาพ" />
-  <input id="lineId" placeholder="LINE ID (เช่น mc357.com)" />
-  <button onclick="shareMessage()">แชร์ไปยังแชท</button>
+  <h3>✨ Flex Generator</h3>
+  <input id="imageUrl" placeholder="วางลิงก์รูปภาพที่นี่" />
+  <input id="lineId" placeholder="ใส่ LINE ID ที่นี่ (เช่น mc357.com)" />
+  <button onclick="sendFlex()">สร้างและแชร์ Flex</button>
 </div>
 
 <div class="panel">
-  <h3>ตรวจสอบ UserId ของคุณ</h3>
+  <h3>🔍 ตรวจสอบ UserId ของคุณ</h3>
   <button onclick="showMyUserId()">กดเพื่อดู UserId</button>
   <div id="myUserId"></div>
 </div>
 
-<button onclick="contactCreator()">ติดต่อผู้สร้าง</button>
+<button onclick="contactCreator()">📩 ติดต่อผู้สร้าง</button>
+
+<div class="panel" id="noAccessPanel" style="display:none; border:1px solid red; background:rgba(255,0,0,0.2);">
+  <h3 style="color:red;">⛔ คุณไม่มีสิทธิ์ส่ง Flex</h3>
+  <button onclick="goAddFriend()" style="color:#fff; border-color:#fff;">➕ ติดต่อแอดมิน (เพิ่มเพื่อน LINE)</button>
+</div>
 
 <div class="panel">
-  <h3>เครดิตระบบ</h3>
-  <p>FLEX ฟรี สนใจติดต่อ ID: mc357.com</p>
+  <h3>🛡 UserId ที่มีสิทธิ์ใช้งานระบบ</h3>
+  <p>"Admin","Ua48c35a3cd7641afee1d85c317032ad5"</p>
   <p>"ระบบ1","U0000000000000000000000000000000"</p>
   <p>"ชื่อจำลอง","U9999999999999999999999999999999"</p>
+  <p>📌 วิธีเพิ่ม UserId คนที่ 3:</p>
+  <p>"ชื่อระบบ1","useridจำลองของคุณ"</p>
 </div>
 
 <div class="qr">
-  <p>แสกนเพื่อติดต่อผู้สร้าง</p>
+  <h3>📱 แสกนเพื่อติดต่อผู้สร้าง</h3>
   <img src="https://img5.pic.in.th/file/secure-sv1/IMG_12468d6ce5b9565e3489.jpeg"/>
   <p>แสกนเพื่อติดต่อผู้สร้าง</p>
 </div>
 
 <script>
-async function shareMessage(){
-  if(!liff.isInClient()) return alert("⚠ กรุณาเปิดผ่าน LINE");
+// ตั้งค่า UserId ที่มีสิทธิ์
+const ADMIN = "Ua48c35a3cd7641afee1d85c317032ad5";
+const whitelist = [
+  "Ua48c35a3cd7641afee1d85c317032ad5", // Admin
+  "U0000000000000000000000000000000",   // ระบบ1
+  "U9999999999999999999999999999999"    // จำลอง
+];
+
+let currentUserId = "";
+
+// ฟังก์ชันสร้างและแชร์ Flex
+async function sendFlex(){
+  if(!liff.isInClient()) return alert("⚠ กรุณาเปิดผ่านแอป LINE");
   if(!liff.isLoggedIn()) return liff.login();
 
-  const profile = await liff.getProfile();
-  const userId = profile.userId;
-  const imageUrl = document.getElementById("imageUrl").value.trim();
-  const lineId = document.getElementById("lineId").value.trim();
-
-  if(!imageUrl || !lineId) return alert("❌ กรุณากรอกข้อมูลให้ครบ");
-
-  const message = `FLEX ฟรี\nสนใจติดต่อ ID: mc357.com\nรูป: ${imageUrl}\nLINE ID: ${lineId}`;
-
   try{
-    await liff.shareTargetPicker([
-      { type: "text", text: message }
-    ]);
-    alert("📨 แชร์ข้อความสำเร็จ!");
+    const profile = await liff.getProfile();
+    currentUserId = profile.userId;
+
+    if(!whitelist.includes(currentUserId)){
+      document.getElementById("noAccessPanel").style.display = "block";
+      return alert("⛔ UserId นี้ไม่มีสิทธิ์ส่ง Flex");
+    }
+
+    const imageUrl = document.getElementById("imageUrl").value.trim();
+    const lineId = document.getElementById("lineId").value.trim();
+    if(!imageUrl || !lineId) return alert("❌ กรุณากรอกข้อมูลให้ครบ");
+
+    const flexMsg = {
+      type: "flex",
+      altText: "FLEX ฟรี สนใจติดต่อ ID: mc357.com",
+      contents: {
+        type: "carousel",
+        contents: [
+          {
+            type: "bubble",
+            size: "giga",
+            hero: {
+              type: "image",
+              url: imageUrl,
+              size: "full",
+              aspectRatio: "2:3",
+              aspectMode: "cover",
+              action: { type: "uri", uri: "https://line.me/ti/p/~" + lineId }
+            },
+            body: {
+              type: "box",
+              layout: "vertical",
+              contents: [
+                { type: "text", text: "FLEX ฟรี", weight: "bold", size: "xl", color: "#0ff" },
+                { type: "text", text: "สนใจติดต่อ ID: mc357.com", size: "md", margin: "md", color: "#fff" }
+              ]
+            },
+            footer: {
+              type: "box",
+              layout: "vertical",
+              contents: [
+                { type: "button", style: "primary", label: "ติดต่อผู้สร้าง", action: { type: "uri", uri: "https://line.me/ti/p/~mc357.com" } }
+              ],
+              backgroundColor: "#000"
+            }
+          }
+        ]
+      }
+    };
+
+    await liff.shareTargetPicker([flexMsg]);
+    alert("✨ ส่ง Flex สำเร็จ!");
   }catch(e){
-    alert("❌ แชร์ไม่สำเร็จ: " + e);
+    alert("❌ เกิดข้อผิดพลาด: " + e);
   }
 }
 
+// ฟังก์ชันแสดง UserId ของตัวเอง
 async function showMyUserId(){
+  if(!liff.isLoggedIn()) await liff.login();
   const profile = await liff.getProfile();
   document.getElementById("myUserId").innerText = profile.userId;
 }
 
+// ปุ่มติดต่อผู้สร้าง
 function contactCreator(){
   window.location.href = "https://line.me/ti/p/~mc357.com";
 }
 
+// ปุ่มเพิ่มเพื่อน admin
+function goAddFriend(){
+  window.location.href = "https://line.me/ti/p/~mc357.com";
+}
+function goAddFriend(){
+  window.location.href = "https://line.me/ti/p/~mc357.com";
+}
+
+// Init LIFF และแสดงชื่อผู้ใช้
 liff.init({ liffId: "2008621627-1eN2VA2x" }).then(async ()=>{
-  if(!liff.isLoggedIn()) liff.login();
+  if(!liff.isLoggedIn()) await liff.login();
   const profile = await liff.getProfile();
+  currentUserId = profile.userId;
   document.getElementById("greeting").innerText = "สวัสดีคุณ " + profile.displayName;
 });
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
